<resources>
    <string name="app_name">Github Friend</string>
    <string name="text_profile">Profile</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_search">Search</string>
    <string name="text_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_found">Mysteriously missing. Just like my patience or it just never existed.</string>
    <string name="not_found_header">Existed here… once</string>
    <string name="text_loading">Loading...</string>
    <string name="hint_search">Search user or organization</string>
    <string name="help_text_avatar">avatar of user</string>
    <string name="text_followers">followers</string>
    <string name="text_following">following</string>
    <string name="desc_user_avatar">avatar icon</string>
    <string name="label_following">Following</string>
    <string name="label_repos">Repos</string>
    <string name="label_followers">Followers</string>
    <string name="text_share">Share</string>
    <string name="text_back">back</string>
    <string name="text_use_dark_mode">Use Dark Mode</string>
</resources>