<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".UserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:style/TextAppearance"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="400dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/help_text_avatar"
                        tools:src="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/lr_profile_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@id/cv_avatar"
                    app:layout_constraintStart_toEndOf="@id/cv_avatar"
                    app:layout_constraintTop_toTopOf="@id/cv_avatar">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="@tools:sample/full_names" />

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@tools:sample/first_names" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_bio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="16dp"
                    android:background="@color/gray"
                    android:maxLines="2"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/cv_avatar"
                    tools:text="@tools:sample/lorem/random" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_bio">

                    <TextView
                        android:id="@+id/tv_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        app:drawableStartCompat="@drawable/ic_briefcase_black_24dp"
                        tools:text="@tools:sample/cities" />

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        android:textSize="15sp"
                        app:drawableStartCompat="@drawable/ic_location_black_24dp"
                        tools:text="@tools:sample/cities" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:contentDescription="@string/desc_user_avatar"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="4dp"
                            android:src="@drawable/ic_user_black_24dp" />

                        <TextView
                            android:id="@+id/tv_followers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            tools:text="@tools:sample/us_zipcodes" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="3dp"
                            android:layout_marginEnd="12dp"
                            android:text="@string/text_followers" />

                        <TextView
                            android:id="@+id/tv_following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            tools:text="@tools:sample/us_zipcodes" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="4dp"
                            android:layout_marginTop="3dp"
                            android:text="@string/text_following" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabGravity="fill"
            app:tabIndicatorColor="@android:color/white"
            app:tabMode="fixed"
            app:tabTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>